fix(sponsorSizeByCategory) : make bronze sponsor logo smaller than gold

--- a/src/global.scss
+++ b/src/global.scss
@@ -533,6 +533,9 @@ a.link {
     max-width: 50%;
     margin: 0;
   }
+  .bronze img {
+    max-width: 25%;
+  }
   .gold, .bronze {
     h2 {
       margin: 0;
