--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -16,6 +16,7 @@
         <a class="link" href="./#quisommesnous">Qui sommes nous ?</a>
         <a class="link" href="./#participer">Participer</a>
         <a class="link" href="./#proposer">Proposer un sujet</a>
+        <a class="link" href="./agenda.html">Agenda</a>
         <a class="link" href="./sponsors.html">Sponsors</a>
     </nav>
 </header>
