switch CFP to Agenda

--- a/src/agenda/agenda.scss
+++ b/src/agenda/agenda.scss
@@ -1,5 +1,7 @@
 @import "../variables";
-
+.content > section.agenda {
+  background-color: $BgColorDark;
+}
 .agenda-content {
   display: flex;
   flex-direction: column;
