feature(talkDescriptions) : updating counts

--- a/src/partials/presentation.html
+++ b/src/partials/presentation.html
@@ -18,7 +18,7 @@
         </div>
         <div class="conf">
             <img src="../../img/micro.svg" alt="picto d'un micro">
-            <p>14 conférences et 6 lightning talks</p>
+            <p>18 conférences, 6 lightning talks, 4 hands on</p>
         </div>
     </article>
     <article class="presentation-event">
