--- a/src/agenda/agenda.scss
+++ b/src/agenda/agenda.scss
@@ -48,15 +48,24 @@ $cellSize: 11rem;
 
 .agenda-TD .agenda-event.keynote {
   flex: 1;
-  @media (min-width: $tablet) {
-    flex-basis: $cellSize;
-    background-color: $BgColorDark;
-    border: none;
-  }
+    @media (min-width: $tablet) {
+      flex-basis: $cellSize;
+      .agenda-event-wrapper {
+        background-color: $BgColorDark;
+        border: none;
+      }
+    }
   .agenda-hours {display: none;}
 }
 
 .agenda-event {
+  display: flex;
+  flex-direction: column;
+}
+
+.agenda-event-wrapper {
+  flex: 1;
+
   display: flex;
   flex-direction: column;
 
@@ -70,16 +79,26 @@ $cellSize: 11rem;
 }
 
 .agenda-event.lightning {
-  flex-basis: $cellSize / 2;
+  flex-basis: $cellSize / 1.5;
   p {
     margin: 0;
   }
 }
+.agenda-event.lightning-break {
+  flex-basis: $cellSize / 1.5;
+  .agenda-event-wrapper {
+    display: none;
+  }
+}
 
 .agenda-event.break {
-  background-color: $BgColorDark;
-  border: none;
   flex-basis: $cellSize / 4;
+  max-height: $cellSize / 4;
+
+  .agenda-event-wrapper {
+    background-color: $BgColorDark;
+    border: none;
+  }
 
   .agenda-hours {display: none;}
 }
