feat(sponsors): add silver section

--- a/src/global.scss
+++ b/src/global.scss
@@ -534,6 +534,9 @@ a.link {
     max-width: 50%;
     margin: 0;
   }
+  .silver img {
+    max-width: 40%;
+  }
   .bronze img {
     max-width: 25%;
   }
