--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -6,6 +6,10 @@
             <a target="_blank" href="http://www.apside.com"><img src="../../img/logo-apside.png" alt="Logo d'apside"></a>
             <a target="_blank" href="http://lunatech.com/fr/"><img src="../../img/logo-lunatech.png" alt="Logo de Lunatech"></a>
         </div>
+        <div class="silver">
+            <h2>Silver</h2>
+            <a target="_blank" href="http://fr.worldline.com/fr-fr/home.html"><img src="../../img/worldline.png" alt="Logo Worldline"></a>
+       </div>
         <div class="bronze">
             <h2>Bronze</h2>
             <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers"></a>
