--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -17,4 +17,6 @@
     <article class="partenaires">
         <a target="_blank" href="http://polytech.univ-tours.fr"><img src="../../img/logo-polytech.png" alt="Logo de Polytech"></a>
     </article>
+
+    <a id="becomeSponsorLink" href="./sponsors.html">Devenir sponsor</a>
 </section>
