--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -12,15 +12,14 @@
        </div>
         <div class="bronze">
             <h2>Bronze</h2>
-            <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers"></a>
             <a target="_blank" href="https://www.saagie.com/fr"><img src="../../img/logo-saagie.png" alt="Logo Saagie"></a>
+            <a target="_blank" href="https://code-troopers.com"><img src="../../img/logo-code-troopers.png" alt="Logo Code Troopers"></a>
             <a target="_blank" href="http://www.my-serious-game.com/"><img src="../../img/logo-MySG.png" alt="Logo My Serious Game"></a>
         </div>
+        <div class="partenaires">
+            <h2>Partenaires</h2>
+            <a target="_blank" href="http://polytech.univ-tours.fr"><img src="../../img/logo-polytech.png" alt="Logo de Polytech"></a>
+        </div>
     </article>
-    <h1>Partenaires</h1>
-    <article class="partenaires">
-        <a target="_blank" href="http://polytech.univ-tours.fr"><img src="../../img/logo-polytech.png" alt="Logo de Polytech"></a>
-    </article>
-
     <a id="becomeSponsorLink" href="./sponsors.html">Devenir sponsor</a>
 </section>
