--- a/src/partials/event.html
+++ b/src/partials/event.html
@@ -7,7 +7,7 @@
         <div class="event">
             <p>Pour cette première édition, nous organisons une journée de conférence sur Tours dans les locaux du département informatique de <em>l'école Polytechnique de l'Université de Tours</em>.</p>
             <p>Seront mis à disposition 2 amphithéâtres, une salle de prises en mains, un grand espace sponsor, une cafétéria.<br>
-                <em>La journée se déroulera sur 2 tracks de conférences pour un total de 14 conférences et 6 lightning talks</em>.</p>
+                <em>La journée se déroulera sur 3 tracks de conférences pour un total de 18 conférences, 6 lightning talks et 4 hands on</em>.</p>
         </div>
     </article>
 </section>
