--- a/src/global.scss
+++ b/src/global.scss
@@ -172,7 +172,7 @@ a.link {
  */
 .content {
   flex: 1;
-  overflow-y: scroll;
+
   > section, .presentation {
     @include flex(center);
     flex-direction: column;
@@ -491,9 +491,13 @@ section#inscriptions {
       font-size: 1rem;
     }
   }
+  .ateliers > a {
+    padding: 2%;
+    max-width: 12%;
+    display: inline-block;
+  }
   img {
-    width: 10%;
-    margin: 2rem;
+    width: 100%;
   }
   @media (max-width: $tablet - 1) {
     padding: 2rem;
@@ -507,11 +511,12 @@ section#inscriptions {
       font-size: .8rem;
       line-height: 1.5rem;
     }
-    img {
-      width: 20%;
+
+    .ateliers > a {
+      max-width: 22%;
       @media (max-width: $phone - 1) {
-        width: 35%;
-        margin: 1rem;
+        max-width: 36%;
+        padding: 1%;
       }
     }
   }
