--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,7 +1,7 @@
 <section style="background-color: #1f202c; height: 100px"></section>
 <section class="news" id="news">
     <h1>Les actus</h1>
-    <p>Suivez nos actus, eos mollitia recusandae ullam. Aperiam atque dicta, doloribus nemo officia saepe!</p>
+    <p>Suivez nos actus !</p>
     <div class="news-previews-list">
         ${require('../articles/fragments/allHome')}
     </div>
