--- a/src/partials/news.html
+++ b/src/partials/news.html
@@ -1,9 +1,10 @@
-<section style="background-color: #1f202c; height: 100px"></section>
 <section class="news" id="news">
     <h1>Les actus</h1>
-    <p>Suivez nos actus, eos mollitia recusandae ullam. Aperiam atque dicta, doloribus nemo officia saepe!</p>
+    <p class="actus-reseaux">Pour suivre nos actus, suivez nous sur twitter ! <a href="https://twitter.com/tourainetech" target="_BLANK"><img src="../../img/twitter_logo_link.png" alt="Twitter" class="logo_link"></a><a href="https://www.facebook.com/tourainetech/" target="_BLANK"><img src="../../img/facebook_link_logo.png" alt="Twitter" class="logo_link"></a></p>
     <div class="news-previews-list">
         ${require('../articles/fragments/allHome')}
     </div>
     <a href="./news.html" class="link">Lire les articles</a>
 </section>
+
+
