--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -13,6 +13,7 @@
     <nav>
         <a class="link" href="./#presentation">Présentation</a>
         <a class="link" href="./#thematiques">Thématiques</a>
+        <a class="link" href="./#news">News</a>
         <a class="link" href="./#quisommesnous">Qui sommes nous ?</a>
         <a class="link" href="./#participer">Participer</a>
         <a class="link" href="./#agenda">Agenda</a>
