feat(funlab): add funlab as sponsor
funlab logo added on website

--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -20,6 +20,7 @@
         <div class="partenaires">
             <h2>Partenaires</h2>
             <a target="_blank" href="http://polytech.univ-tours.fr"><img src="../../img/logo-polytech.png" alt="Logo de Polytech"></a>
+            <a target="_blank" href="http://funlab.fr"><img src="../../img/logo-funlab.png" alt="Logo du funlab"></a>
         </div>
     </article>
     <a id="becomeSponsorLink" href="./sponsors.html">Devenir sponsor</a>
