feature(presentationWorldline) : do not reverse paragraph order, put logo after text

--- a/src/global.scss
+++ b/src/global.scss
@@ -727,7 +727,7 @@ footer a:visited {
     .news-item-content {
       text-align: center;
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
       width: 100%;
       p {
         font-size: 1.4rem;
