fix(flex) : do not reverse a text order !!!

--- a/src/global.scss
+++ b/src/global.scss
@@ -875,7 +875,7 @@ footer a:visited {
     .news-item-content {
       text-align: center;
       display: flex;
-      flex-direction: column-reverse;
+      flex-direction: column;
       padding: 0 15%;
       p {
         padding: 0 5px;
