--- a/src/partials/participer.html
+++ b/src/partials/participer.html
@@ -1,8 +1,7 @@
 <section id="participer" itemscope itemtype="http://schema.org/Event">
     <h1>Inscriptions</h1>
     <div class="inscriptions">
-        <p>La billeterie est ouverte ! Foncez vous inscrire.</p>
-        <p><a href="https://www.helloasso.com/associations/palo-altours/evenements/touraine-tech-2018">inscrivez-vous ici</a></p>
+        <p>CLOSED, SEE YOU NEXT YEAR !</p>
         <p>
             <a href="https://twitter.com/tourainetech" target="_BLANK"><img src="../../img/twitter_logo_link.png" alt="Twitter" class="logo_link"></a>
             <a href="https://www.facebook.com/tourainetech/" target="_BLANK"><img src="../../img/facebook_link_logo.png" alt="Twitter" class="logo_link"></a>
