feat(web): add Dailymotion as sponsor

--- a/src/partials/partenaires.html
+++ b/src/partials/partenaires.html
@@ -18,6 +18,7 @@
         </div>
         <div class="partenaires">
             <h2>Partenaires</h2>
+            <a target="_blank" href="https://www.dailymotion.com/fr"><img src="../../img/Dailymotion_logo_blue.png" alt="Logo Dailymotion"></a>
             <a target="_blank" href="http://polytech.univ-tours.fr"><img src="../../img/logo-polytech.png" alt="Logo de Polytech"></a>
             <a target="_blank" href="http://funlab.fr"><img src="../../img/logo-funlab.png" alt="Logo du funlab"></a>
         </div>
