--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
 <footer>
-    <a href="http://2018.touraine.tech" target="_blank">Édition 2018</a>
+    <a href="https://2018.touraine.tech" target="_blank">Édition 2018</a>
     <a href="http://confcodeofconduct.com/index-fr.html" target="_blank">code de conduite</a>
 </footer>
