feat(speakerPicture) : adding speaker evening picture as background

--- a/assets/scss/variables.scss
+++ b/assets/scss/variables.scss
@@ -1,4 +1,5 @@
 $color-primary: #222333;
+$color-primary-alpha: rgba(34, 35, 51, 0.8);
 $color-secondary: #6ABFAD;
 
 $width-container: calc(800px + 2rem);
