--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,4 +1,5 @@
-@import "./variables";
+@use "sass:color";
+@use "./variables" as *;
 
 html {
   font-family: 'Noto Sans', sans-serif;
@@ -109,14 +110,14 @@ a.label--text, span.label--text {
 a.label--white, span.label--white {
   color: white;
   border-color: white;
-  background-color: lighten($color-secondary, 10%);
+  background-color: color.adjust($color-secondary, $lightness: 10%);
 }
 
 
 span.label--green {
   color: $color-secondary;
   border-color: $color-secondary;
-  background-color: darken(white, 10%);
+  background-color: color.adjust(white, $lightness: -10%);
 }
 
 span.no-wrap{
@@ -138,7 +139,7 @@ div.description--container a{
   transition: all 100ms ease-in-out;
 
   &--disabled {
-    background-color: transparentize(lightgrey, 0.5) !important;
+    background-color: color.adjust(lightgrey, $alpha: -0.5) !important;
     transform: scale(0.9);
 
     &:hover {
